istio-basics/workspace/traffic-management/fault-injection/virtualservice-fault.yaml
# See more at https://istio.io/latest/docs/tasks/traffic-management/fault-injection/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
    - details
  http:
  - fault:
      delay:
        percentage:
          value: 70.0
        fixedDelay: 7s
    route:
    - destination:
        host: details
        subset: v1
