istio-basics/workspace/traffic-management/fault-injection/virtualservice-request-timeouts.yaml
# See more at https://istio.io/latest/docs/tasks/traffic-management/request-timeouts/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 0.5s
